Remove legacy Dockerfiles and update 22.04 image
Delete Dockerfile_14.04, _16.04, _18.04 and _20.04

Refactor Dockerfile_22.04: consolidate apt calls, normalize ENV layout,
and add python-is-python3 and neovim to packages

Update run.sh to use new registry (ghcr.io/ngtkien/...) and restrict
UBUNTU_VERSIONS_SUPPORTED to 22.04; IMAGE_REPO now points to the new
registry

--- a/Dockerfile_22.04
+++ b/Dockerfile_22.04
@@ -2,15 +2,16 @@
 # Copyright 2021 Variscite Ltd.
 
 FROM ubuntu:22.04
-MAINTAINER Nate Drude "nate.d@variscite.com"
 
-RUN apt-get update
-RUN apt-get install -y sudo openssl apt-utils
+RUN apt-get update && \
+    apt install -y sudo openssl apt-utils
 
 WORKDIR /workdir
 
 # Define username and temporary uid and gid
-ENV USER=vari USER_ID=1000 USER_GID=1000
+ENV USER=vari \
+    USER_ID=1000 \
+    USER_GID=1000
 
 # now creating user, change password to 'ubuntu'
 RUN groupadd --gid "${USER_GID}" "${USER}" && \
@@ -25,9 +26,9 @@ RUN groupadd --gid "${USER_GID}" "${USER}" && \
 #setup locale
 ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get install -y locales && dpkg-reconfigure locales --frontend noninteractive && locale-gen "en_US.UTF-8" && update-locale LC_ALL=en_US.UTF-8 LANG=en_US.UTF-8
-ENV LANG en_US.UTF-8
-ENV LANGUAGE en_US:en
-ENV LC_ALL en_US.UTF-8
+ENV LANG=en_US.UTF-8 \
+    LANGUAGE=en_US:en \
+    LC_ALL=en_US.UTF-8
 
 # Yocto
 RUN apt-get update && apt-get install -y \
@@ -39,7 +40,7 @@ RUN apt-get update && apt-get install -y \
      help2man make gcc g++ desktop-file-utils libgl1-mesa-dev libglu1-mesa-dev \
      mercurial automake groff curl lzop asciidoc u-boot-tools dos2unix mtd-utils pv \
      libncurses5 libncurses5-dev libncursesw5-dev libelf-dev zlib1g-dev bc rename \
-     iproute2 zstd liblz4-tool python-is-python3 nvim
+     iproute2 zstd liblz4-tool python-is-python3 neovim
 
 # B2Qt
 RUN apt-get update && apt-get install -y \
